--- a/Notes/开发中能用到的一些.md
+++ b/Notes/开发中能用到的一些.md
@@ -3,9 +3,9 @@
 {
   width: 0;
   height: 0;
-  border-top: 30px solid transient;
-  border-left: 30px solid transient;
-  border-right: 30px solid transient;
+  border-top: 30px solid transparent;
+  border-left: 30px solid transparent;
+  border-right: 30px solid transparent;
   border-bottom: 30px solid red;
 }
 // 过长省略 ...
