--- a/Notes/开发中能用到的一些.md
+++ b/Notes/开发中能用到的一些.md
@@ -23,6 +23,9 @@
   word-break: break-all;
 }
 // nth-child(5n + 0)第几个
+{ //颜色渐变-从上到下（默认情况下）    (to right, red , yellow)从左到右
+  background-image: linear-gradient(red, yellow)  
+}
 ```
 伪类是操作文档中已有的元素，而伪元素是创建了一个文档外的元素，两者最关键的区别就是这点。此外，为了书写CSS时进行区分，一般伪类是单冒号，如:hover，而伪元素是双冒号::before。  
 一般大部分伪类强制使用单冒号，大部分伪元素单冒号和双冒号都可以，但是为了区分，建议按照规范书写。[伪类](https://www.runoob.com/css/css-pseudo-classes.html)  
