--- a/Notes/开发中能用到的一些.md
+++ b/Notes/开发中能用到的一些.md
@@ -115,4 +115,23 @@ __align-items__ 定义了项目在交叉轴上是如何对齐显示的。
 
 原页面打开：window.location.href(url)；新页面打开：window.open(url)  
 console.time('testForEach');console.timeEnd('testForEach');计算代码运行时间
-
+```javascript
+// 点击元素外隐藏
+created() {
+  document.addEventListener('click', this.clickOutside);
+},
+destroyed() {
+  document.removeEventListener('click', this.clickOutside);
+},
+clickOutside(e) {
+  // 可以点击某几个元素外隐藏
+  let id = e.target.id;
+  if (this.$refs.showPanel) {
+    let isSelf = this.$refs.showPanel.contains(e.target);
+    if (!isSelf && id != 'searchInput') {
+      this.isShow = false;
+      this.isSearch = false;
+    }
+  }
+}
+```
