Update and rename interview.md to 面筋-1.md

--- a/Notes/面筋-1.md
+++ b/Notes/面筋-1.md
@@ -1,4 +1,4 @@
-#### 1.从浏览器输入URL到整个页面显示经历了什么？
+### 1.从浏览器输入URL到整个页面显示经历了什么？
 1- 输入网址 → 2- 缓存解析 → 3- 域名解析 → 4- tcp连接，三次握手 → 5-服务器收到请求 6- 页面渲染  
 缓存就是把你之前访问的web资源，比如一些js，css，图片什么的保存在你本机的内存或者磁盘当中。在发送http之前，需要进行DNS解析即域名解析,DNS解析:域名到IP地址的转换过程。域名的解析工作由DNS服务器完成。解析后可以获取域名相应的IP地址  
 在域名解析之后，浏览器向服务器发起了TCP的连接请求，三次握手建立tcp连接。TCP协议是面向连接的，所以在传输数据前必须建立连接  
@@ -6,7 +6,7 @@
 （2）服务端B收到数据包后由标志位SYN=1知道客户端A请求建立连接，服务端B将标志位SYN和ACK都置为1，ack=J+1，随机产生一个值seq=K，并将该数据包发送给客户端A以确认连接请求，服务端B进入SYN_RCVD状态。(ACK报文)  
 （3）客户端A收到确认后，检查ack是否为J+1，ACK是否为1，如果正确则将标志位ACK置为1，ack=K+1，并将该数据包发送给服务端B，服务端B检查ack是否为K+1，ACK是否为1，如果正确则连接建立成功，客户端A和服务端B进入ESTABLISHED状态，完成三次握手，随后客户端A与服务端B之间可以开始传输数据了。  
 三次握手”的目的是“为了防止已失效的连接请求报文段突然又传送到了服务端，因而产生错误”。防止服务器接受失效请求；server收到此失效的连接请求报文段后，就误认为是client再次发出的一个新的连接请求。于是就向client发出确认报文段，同意建立连接。主要目的防止server端一直等待，浪费资源。  
-#### 2.EventLoop？
+### 2.EventLoop？
 堆是线性数据结构，相当于一维数组，有唯一后继。  
 栈在计算机科学中是限定仅在表尾进行插入或删除操作的线性表。先进后出  
 队列只允许在表的前端（front）进行删除操作，而在表的后端（rear）进行插入操作；先进先出  
@@ -23,9 +23,12 @@ SYNC => MICRO => MACRO
 1）、同步和异步任务分别进入不同的执行"场所"，同步的进入主线程，异步的进入Event Table并注册函数  
 2）、当指定的事情完成时，Event Table会将这个函数移入Event Queue。  
 3）、主线程内的任务执行完毕为空，会去Event Queue读取对应的函数，进入主线程执行。	Promise 新建后就会立即执行。  
-#### 3.跨域问题及解决方式？
-实现跨浏览器的CORS，JSONP，proxy
-#### 4.call、apply、bind 三者的区别？call 和 apply 哪个性能会好一些？如何实现 call、apply、bind？
+### 3.跨域问题及解决方式？
+__什么是跨域：__ 在前端领域中，跨域是指浏览器允许向服务器发送跨域请求，从而克服Ajax只能同源使用的限制。  
+__什么是同源策略：__ 同源策略是一种约定，由Netscape公司1995年引入浏览器，它是浏览器最核心也最基本的安全功能，如果缺少了同源策略，浏览器很容易受到XSS、CSFR等攻击。所谓同源是指"协议+域名+端口"三者相同，即便两个不同的域名指向同一个ip地址，也非同源。  
+
+
+### 4.call、apply、bind 三者的区别？call 和 apply 哪个性能会好一些？如何实现 call、apply、bind？
 bind、apply、call 都是用来绑定函数执行时this的指向（改变函数执行时的上下文），同时还可以传参，调用它们的对象必须是一个函数 Function。call、apply可用于调用函数
 ```javascript
 // call  
@@ -69,7 +72,7 @@ Function.prototype.myCall = function(context) {
 
 say.myCall(obj, '咿呀咿呀哟', '呱呱！') // 我是一只小鸭子，咿呀咿呀哟，呱呱！
 ```
-#### 5.浏览器内存泄露的场景及如何解决？
+### 5.浏览器内存泄露的场景及如何解决？
 **什么是内存泄漏** ：申请的内存没有及时回收掉，被泄漏了  
 **为什么会发生内存泄漏** ：虽然前端有垃圾回收机制，但当某块无用的内存，却无法被垃圾回收机制认为是垃圾时，也就发生内存泄漏了.垃圾回收机制通常是使用标志清除策略  
 
