--- a/Notes/开发中能用到的一些.md
+++ b/Notes/开发中能用到的一些.md
@@ -1,4 +1,4 @@
-```
+```css
 //  三角形
 {
   width: 0;
@@ -25,6 +25,13 @@
 // nth-child(5n + 0)第几个
 { //颜色渐变-从上到下（默认情况下）    (to right, red , yellow)从左到右
   background-image: linear-gradient(red, yellow)  
+}
+// transform 属性向元素应用 2D 或 3D 转换。该属性允许我们对元素进行旋转、缩放、移动或倾斜
+{
+  transform:translate(20px,10px); //定义2D转换  xy轴方向移动
+  transform:rotate(7deg); // 旋转元素
+  transform:translateX(20px); // X轴偏移
+  transform:scale(x,y); // 2D缩放
 }
 ```
 伪类是操作文档中已有的元素，而伪元素是创建了一个文档外的元素，两者最关键的区别就是这点。此外，为了书写CSS时进行区分，一般伪类是单冒号，如:hover，而伪元素是双冒号::before。  
