--- a/Notes/开发中能用到的一些.md
+++ b/Notes/开发中能用到的一些.md
@@ -39,7 +39,7 @@
 
 first-child 伪类来选择父元素的第一个子元素。伪元素：CSS伪元素是用来添加一些选择器的特殊效果。  
 ### tips提示或者输入框小角标 ###
-```
+```css
 //before和after位置颜色不同
 <style>
   .border-triangle-bottom {
@@ -143,3 +143,49 @@ clickOutside(e) {
 }
 // @submit.native.prevent 阻止输入框enter刷新页面，@keydown.enter.native enter事件
 ```
+
+### 关于文件或者图片上传
+```javascript
+<button
+  type="button"
+  @click="click"
+>
+  <span v-if="fileName">重新上传</span>
+  <span v-else>上传文件</span>
+</button>
+<span>{{ fileName }}</span>
+<input
+  id='input'
+  type="file"
+  ref="uploadFile"
+  style="display:none"
+  @change="upload"
+  multiple
+/>
+data() {
+  return { fileName: '' }
+}
+click() {
+  // 偷梁换柱,触发文件上传
+  this.$refs.uploadFile.click();
+},
+async upload(event) {
+  let files = event.target.files || event.dataTransfer.files;
+  console.log(files);
+
+  if (!files.length) {
+    this.fileName = '';
+    return;
+  }
+  this.fileName = files[0].name;
+
+  // 通过FormData将文件转成二进制数据
+  let params = new FormData();
+  params.append('file', files[0]);
+  const { data: res } = await this.$HttpApi.uploadFile(params);
+  console.log(res);
+}
+```
++ FormData 接口提供了一种表示表单数据的键值对 key/value 的构造方式，并且可以轻松的将数据通过XMLHttpRequest.send() 方法发送出去
+
+
