--- a/Notes/面筋-1.md
+++ b/Notes/面筋-1.md
@@ -7,6 +7,7 @@
 （3）客户端A收到确认后，检查ack是否为J+1，ACK是否为1，如果正确则将标志位ACK置为1，ack=K+1，并将该数据包发送给服务端B，服务端B检查ack是否为K+1，ACK是否为1，如果正确则连接建立成功，客户端A和服务端B进入ESTABLISHED状态，完成三次握手，随后客户端A与服务端B之间可以开始传输数据了。  
 三次握手”的目的是“为了防止已失效的连接请求报文段突然又传送到了服务端，因而产生错误”。防止服务器接受失效请求；server收到此失效的连接请求报文段后，就误认为是client再次发出的一个新的连接请求。于是就向client发出确认报文段，同意建立连接。主要目的防止server端一直等待，浪费资源。  
 ### 2.EventLoop？
+Event Loop即事件循环，是指浏览器或Node的一种解决javaScript单线程运行时不会阻塞的一种机制，也就是我们经常使用异步的原理  
 堆是线性数据结构，相当于一维数组，有唯一后继。  
 栈在计算机科学中是限定仅在表尾进行插入或删除操作的线性表。先进后出  
 队列只允许在表的前端（front）进行删除操作，而在表的后端（rear）进行插入操作；先进先出  
@@ -14,7 +15,7 @@
 、I/O、UI Rendering。  
 一种叫微任务（MicroTask：Promise、Process.nextTick（Node独有））；  
 区分微任务和宏任务是为了将异步队列任务划分优先级，通俗的理解就是为了插队  
-Javascript 有一个 main thread 主线程和 call-stack 调用栈(执行栈)，所有的任务都会被放到调用栈等待主线程执行。  
+Javascript 有一个 main thread 主线程和 call-stack 调用栈(执行栈)，__所有的任务都会被放到调用栈等待主线程执行。__  
 存在微任务的话，那么就执行所有的微任务；微任务都执行完之后，执行下一个宏任务	以此循环  
 
 执行栈在执行完同步任务后，查看执行栈是否为空，如果执行栈为空，就会去检查微任务(microTask)队列是否为空，如果为空的话，就执行Task（宏任务），否则就一次性执行完所有微任务。  
