--- a/Notes/面筋-1.md
+++ b/Notes/面筋-1.md
@@ -1,5 +1,5 @@
 ### 1.从浏览器输入URL到整个页面显示经历了什么？
-1- 输入网址 → 2- 缓存解析 → 3- 域名解析 → 4- tcp连接，三次握手 → 5-服务器收到请求 6- 页面渲染 [here](https://segmentfault.com/a/1190000017184701)  
+1- 输入网址 → 2- 缓存解析 → 3- 域名解析 → 4- tcp连接，三次握手 → 5-服务器收到请求 6- 页面渲染 [here](https://segmentfault.com/a/1190000017184701),[another](https://github.com/i-want-offer/FE-Essay/blob/master/docs/%E6%B5%8F%E8%A7%88%E5%99%A8%E6%B8%B2%E6%9F%93/%E6%B5%8F%E8%A7%88%E5%99%A8%E8%BE%93%E5%85%A5URL%E7%9A%84%E5%85%A8%E8%BF%87%E7%A8%8B.md)  
 缓存就是把你之前访问的web资源，比如一些js，css，图片什么的保存在你本机的内存或者磁盘当中。在发送http之前，需要进行DNS解析即域名解析,DNS解析:域名到IP地址的转换过程。域名的解析工作由DNS服务器完成。解析后可以获取域名相应的IP地址  
 在域名解析之后，浏览器向服务器发起了TCP的连接请求，三次握手建立tcp连接。TCP协议是面向连接的，所以在传输数据前必须建立连接  
 （1）客户端A将标志位SYN置为1,随机产生一个值为seq=J（J的取值范围为=1234567）的数据包到服务器，客户端A进入SYN_SENT状态，等待服务端B确认  
