--- a/Notes/面筋-1.md
+++ b/Notes/面筋-1.md
@@ -8,12 +8,11 @@
 三次握手”的目的是“为了防止已失效的连接请求报文段突然又传送到了服务端，因而产生错误”。防止服务器接受失效请求；server收到此失效的连接请求报文段后，就误认为是client再次发出的一个新的连接请求。于是就向client发出确认报文段，同意建立连接。主要目的防止server端一直等待，浪费资源。  
 ### 2.EventLoop？
 Event Loop即事件循环，是指浏览器或Node的一种解决javaScript单线程运行时不会阻塞的一种机制，也就是我们经常使用异步的原理  
-堆是线性数据结构，相当于一维数组，有唯一后继。  
-栈在计算机科学中是限定仅在表尾进行插入或删除操作的线性表。先进后出  
-队列只允许在表的前端（front）进行删除操作，而在表的后端（rear）进行插入操作；先进先出  
+JavaScript单线程任务分为 __同步任务__ 和 __异步任务__。  
 在JavaScript中，异步任务被分为两种，一种宏任务（MacroTask）也叫Task:script全部代码、setTimeout、setInterval
 、I/O、UI Rendering。  
 一种叫微任务（MicroTask：Promise、Process.nextTick（Node独有））；  
+async/await在底层被转成了promise和then的回调函数，是promise的语法糖。  
 区分微任务和宏任务是为了将异步队列任务划分优先级，通俗的理解就是为了插队  
 Javascript 有一个 main thread 主线程和 call-stack 执行栈，__所有的任务都会被放到执行栈等待主线程执行。__  
 存在微任务的话，那么就执行所有的微任务；微任务都执行完之后，执行下一个宏任务	以此循环  
