--- a/Notes/面筋-1.md
+++ b/Notes/面筋-1.md
@@ -1,11 +1,12 @@
 ### 1.从浏览器输入URL到整个页面显示经历了什么？
-1- 输入网址 → 2- 缓存解析 → 3- 域名解析 → 4- tcp连接，三次握手 → 5-服务器收到请求 6- 页面渲染 [here](https://segmentfault.com/a/1190000017184701),[another](https://github.com/i-want-offer/FE-Essay/blob/master/docs/%E6%B5%8F%E8%A7%88%E5%99%A8%E6%B8%B2%E6%9F%93/%E6%B5%8F%E8%A7%88%E5%99%A8%E8%BE%93%E5%85%A5URL%E7%9A%84%E5%85%A8%E8%BF%87%E7%A8%8B.md)  
+1- 输入网址 → 2- 缓存解析 → 3- 域名解析 → 4- tcp连接，三次握手 → 5-服务器收到请求 6- 页面渲染，四次挥手 [here](https://segmentfault.com/a/1190000017184701),[another](https://github.com/i-want-offer/FE-Essay/blob/master/docs/%E6%B5%8F%E8%A7%88%E5%99%A8%E6%B8%B2%E6%9F%93/%E6%B5%8F%E8%A7%88%E5%99%A8%E8%BE%93%E5%85%A5URL%E7%9A%84%E5%85%A8%E8%BF%87%E7%A8%8B.md)  
 缓存就是把你之前访问的web资源，比如一些js，css，图片什么的保存在你本机的内存或者磁盘当中。在发送http之前，需要进行DNS解析即域名解析,DNS解析:域名到IP地址的转换过程。域名的解析工作由DNS服务器完成。解析后可以获取域名相应的IP地址  
 在域名解析之后，浏览器向服务器发起了TCP的连接请求，三次握手建立tcp连接。TCP协议是面向连接的，所以在传输数据前必须建立连接  
 （1）客户端A将标志位SYN置为1,随机产生一个值为seq=J（J的取值范围为=1234567）的数据包到服务器，客户端A进入SYN_SENT状态，等待服务端B确认  
 （2）服务端B收到数据包后由标志位SYN=1知道客户端A请求建立连接，服务端B将标志位SYN和ACK都置为1，ack=J+1，随机产生一个值seq=K，并将该数据包发送给客户端A以确认连接请求，服务端B进入SYN_RCVD状态。(ACK报文)  
 （3）客户端A收到确认后，检查ack是否为J+1，ACK是否为1，如果正确则将标志位ACK置为1，ack=K+1，并将该数据包发送给服务端B，服务端B检查ack是否为K+1，ACK是否为1，如果正确则连接建立成功，客户端A和服务端B进入ESTABLISHED状态，完成三次握手，随后客户端A与服务端B之间可以开始传输数据了。  
 三次握手”的目的是“为了防止已失效的连接请求报文段突然又传送到了服务端，因而产生错误”。防止服务器接受失效请求；server收到此失效的连接请求报文段后，就误认为是client再次发出的一个新的连接请求。于是就向client发出确认报文段，同意建立连接。主要目的防止server端一直等待，浪费资源。  
+
 ### 2.EventLoop？
 Event Loop即事件循环，是指浏览器或Node的一种解决javaScript单线程运行时不会阻塞的一种机制，也就是我们经常使用异步的原理  
 JavaScript单线程任务分为 __同步任务__ 和 __异步任务__。  
