--- a/Notes/算法/二叉树.md
+++ b/Notes/算法/二叉树.md
@@ -1,1 +1,26 @@
-二叉树遍历
+### 层序遍历
+层序遍历一个二叉树。就是从左到右一层一层的去遍历二叉树。这种遍历的方式和我们之前讲过的都不太一样。  
+需要借用一个辅助数据结构即队列来实现，__队列先进先出，符合一层一层遍历的逻辑，而是用栈先进后出适合模拟深度优先遍历也就是递归的逻辑。  
+而这种层序遍历方式就是图论中的广度优先遍历，只不过我们应用在二叉树上__  
+```javascript
+var levelOrder = function (root) {
+  let res = [], queue = [];
+  queue.push(root);
+  if (!root) {
+    return res;
+  }
+  while (queue.length) {
+    // 当前节点层数
+    let length = queue.length;
+    let currentLevl = [];
+    for (let i = 0; i < length; i++) {
+      let node = queue.shift();
+      currentLevl.push(node.val);
+      node.left && queue.push(node.left);
+      node.right && queue.push(node.right);
+    }
+    res.push(currentLevl);
+  }
+  return res;
+};
+```
