--- a/Notes/算法/二叉树.md
+++ b/Notes/算法/二叉树.md
@@ -4,22 +4,26 @@
 而这种层序遍历方式就是图论中的广度优先遍历，只不过我们应用在二叉树上__  
 ```javascript
 var levelOrder = function (root) {
+  //二叉树的层序遍历
   let res = [], queue = [];
   queue.push(root);
-  if (!root) {
+  if (root === null) {
     return res;
   }
-  while (queue.length) {
-    // 当前节点层数
+  while (queue.length !== 0) {
+    // 记录当前层级节点数
     let length = queue.length;
-    let currentLevl = [];
+    //存放每一层的节点 
+    let curLevel = [];
     for (let i = 0; i < length; i++) {
       let node = queue.shift();
-      currentLevl.push(node.val);
+      curLevel.push(node.val);
+      // 存放当前层下一层的节点
       node.left && queue.push(node.left);
       node.right && queue.push(node.right);
     }
-    res.push(currentLevl);
+    //把每一层的结果放到结果数组
+    res.push(curLevel);
   }
   return res;
 };
