--- a/Notes/算法/二叉树.md
+++ b/Notes/算法/二叉树.md
@@ -28,3 +28,27 @@ var levelOrder = function (root) {
   return res;
 };
 ```
+### 二叉树的右视图
+```javascript
+var rightSideView = function (root) {
+  // 层序遍历 取单层最后面的元素
+  let res = [], queue = [];
+  if (!root) {
+    return res;
+  }
+  queue.push(root);
+  while (queue.length) {
+    let count = queue.length;
+    while (count--) {
+      let node = queue.shift();
+      //length长度为0的时候表明到了层级最后一个节点
+      if (!count) {
+        res.push(node.val)
+      }
+      node.left && queue.push(node.left);
+      node.right && queue.push(node.right);
+    }
+  }
+  return res;
+};
+```
