--- a/Notes/算法/二叉树.md
+++ b/Notes/算法/二叉树.md
@@ -52,3 +52,30 @@ var rightSideView = function (root) {
   return res;
 };
 ```
+### 填充每个节点的下一个右侧节点指针
+```javascript
+// 层次遍历
+var connect = function (root) {
+  let queue = [];
+  if (!root) {
+    return root;
+  }
+  queue.push(root);
+  // 外层的 while 循环迭代的是层数
+  while (queue.length) {
+    let count = queue.length;
+    for (let i = 0; i < count; i++) {
+      let node = queue.shift();
+      // 连接
+      if (count - 1 > i) {
+        node.next = queue[0];
+      }
+      node.left && queue.push(node.left);
+      node.right && queue.push(node.right);
+    }
+  }
+  return root;
+};
+```
+
+
