--- a/Notes/算法/二叉树.md
+++ b/Notes/算法/二叉树.md
@@ -52,30 +52,26 @@ var rightSideView = function (root) {
   return res;
 };
 ```
-### 填充每个节点的下一个右侧节点指针
+### 对称二叉树
 ```javascript
-// 层次遍历
-var connect = function (root) {
-  let queue = [];
-  if (!root) {
-    return root;
+var isSymmetric = function (root) {
+  if (root == null) {
+    return true;
   }
-  queue.push(root);
-  // 外层的 while 循环迭代的是层数
-  while (queue.length) {
-    let count = queue.length;
-    for (let i = 0; i < count; i++) {
-      let node = queue.shift();
-      // 连接
-      if (count - 1 > i) {
-        node.next = queue[0];
-      }
-      node.left && queue.push(node.left);
-      node.right && queue.push(node.right);
+  function compare(left, right) {
+    // 比较左侧树和右侧树的内侧和外侧节点
+    if (left == null && right != null) {
+      return false;
+    } else if (left != null && right == null) {
+      return false;
+    } else if (left == null && right == null) {
+      return true;
+    } else if (left.val != right.val) {
+      return false;
+    } else {
+      return compare(left.left, right.right) && compare(left.right, right.left)
     }
   }
-  return root;
+  return compare(root.left, root.right);
 };
 ```
-
-
