--- a/Notes/面筋-1.md
+++ b/Notes/面筋-1.md
@@ -101,4 +101,9 @@ __循环引用__： eg:两个对象，互相引用对方。如果持续调用下
 __DOM元素的引用__：DOM 元素的生命周期正常是取决于是否挂载在 DOM 树上，当从 DOM 树上移除时，也就可以被销毁回收了。但如果某个 DOM 元素，在 js 中也持有它的引用时，那么它的生命周期就由 js 和是否在 DOM 树上两者决定了，记得移除时，两个地方都需要去清理才能正常回收它。    
 __控制台的打印__  
 
+### V8垃圾回收机制
+垃圾回收回收策略：JavaScript内存管理中有一个概念叫 __可达性__ ，就是那些以某种方式可访问或者可用的值，他们保证存储在内存中，反之不可达则需回收。  
++ 标记清楚算法
+目前JavaScript引擎里最常用的算法，大多数浏览器JavaScript引擎都在采用，不同浏览器对此算法进行了优化加工，在运行垃圾回收频率有所差异。
++ 引用计数算法
 
