--- a/Notes/面筋-1.md
+++ b/Notes/面筋-1.md
@@ -102,8 +102,42 @@ __DOM元素的引用__：DOM 元素的生命周期正常是取决于是否挂载
 __控制台的打印__  
 
 ### V8垃圾回收机制
+[详细介绍](https://juejin.cn/post/6844904016325902344)  
 垃圾回收回收策略：JavaScript内存管理中有一个概念叫 __可达性__ ，就是那些以某种方式可访问或者可用的值，他们保证存储在内存中，反之不可达则需回收。  
-+ 标记清楚算法
-目前JavaScript引擎里最常用的算法，大多数浏览器JavaScript引擎都在采用，不同浏览器对此算法进行了优化加工，在运行垃圾回收频率有所差异。
-+ 引用计数算法
+引擎使用标记清除算法时，需要从出发点去遍历内存中所有的对象去打标记，这个出发点有很多，称为一组根对象
+#### 1.标记清除算法
+目前JavaScript引擎里最常用的算法，大多数浏览器JavaScript引擎都在采用，不同浏览器对此算法进行了优化加工，在运行垃圾回收频率上有所差异，每个一段时间进行一次。  
+整个标记清除过程大致如下：
++ 垃圾收集器在运行是会给内存中所有变量都加上一个标记，假设内存中所有的对象都是垃圾，全标记为0
++ 然后从各个根对象开始遍历，把不是垃圾的节点变为1
++ 清理所有标记为0的垃圾，销毁并回收他们所占用的内存空间
++ 最后把内存中对象标记修改为0，等待下一轮的垃圾回收
+__优点:__ 实现比较简单，打标记无非打与不打，使得一位二进制就可以为其标记
+__缺点:__ 清除后，剩余的对象内存位置是不变的，会导致空闲的空间不是连续的，出现了 __内存碎片__ ，并且由于剩余空闲内存不是一整块，由不同大小内存组成的内存列表，引出内存分配的问题。
+新建对象分配内存大小为size，需要对空闲内存进行一次遍历找到合适的size。有三种方法，导致 __分配速速缓慢__。  
+__标记整理算法__ 可以解决此问题，它在标记阶段和清除阶段没区别，只是标记结束后，标记整理算法会将不需要整理的对象向着内存的一端移动，最后清理掉边界内存。
+#### 2.引用计数算法
+把 __对象是否不再需要__ 简化定义为 __对象没有其他对象引用到它__，如果没有引用指向该对象（零引用），对象将被垃圾回收机制回收。目前使用较少
++ 当声明了一个变量并且将一个引用类型赋值给改变量的时候这个值的引用次数就为1
++ 如果同一个值又被赋给了另一个变量，那么引用次数加1
++ 如果该变量的值被其他的值覆盖，引用次数减1
++ 当这个引用次数变为0的时候，说明没有变量在使用，这个值没法被访问了，会被清理。
+```JavaScript
+let a = new Object()  //引用计数为 1 (a引用)
+let b = a             //引用计数为 2 (a,b引用)
+a = null              //引用计数为 1 (b引用)
+b = null              // 0 无引用 ，回收
+// 循环引用会导致内存不释放，切断引用关系可避免此类问题
+```
+#### 3.V8对GC的优化
+##### 分代式垃圾回收，新老生代:
+V8中将堆内存分为新生代和老生代两区域采用不同的垃圾回收器也就是不同的策略管理垃圾回收，新老生代回收频率不同
++ 新生代垃圾回收
++ 老生代垃圾回收
 
+##### 并行回收:
+JavaScript是单线程语言，它是运行在主线程的，进行垃圾回收是会阻塞JavaScript脚本的执行，需要等垃圾回收接受后再恢复脚本运行，叫 __全停顿__。  
+新生代对象空间就是采用并行策略，在执行垃圾回收的过程中启用多个线程进行垃圾清理
+
+##### 增量标记与懒性清理:
+##### 并发回收:
