--- a/Notes/项目开发相关/开发中能用到的一些.md
+++ b/Notes/项目开发相关/开发中能用到的一些.md
@@ -199,3 +199,24 @@ async upload(event) {
 ```
 + FormData 接口提供了一种表示表单数据的键值对 key/value 的构造方式，并且可以轻松的将数据通过XMLHttpRequest.send() 方法发送出去
 
+```javascript
+// 解决跨域文件下载命名问题
+fetch(url, {
+    headers: new Headers({
+      Origin: window.location.origin
+    }),
+    mode: 'cors'
+  })
+    .then(res => res.blob())
+    .then(blob => {
+      const blobUrl = window.URL.createObjectURL(blob);
+      let eleLink = document.createElement('a');
+      eleLink.download = fileName;
+      eleLink.style.display = 'none';
+      eleLink.href = blobUrl;
+      document.body.appendChild(eleLink);
+      eleLink.click();
+      document.body.removeChild(eleLink);
+      window.URL.revokeObjectURL(blobUrl);
+    });
+```
