--- a/Notes/防抖与节流.md
+++ b/Notes/防抖与节流.md
@@ -24,8 +24,8 @@ function debounce(fn, delay) {
     }
 }
 // 图片懒加载        <img src="default.jpg" data-src="http://www.xxx.com/target.jpg" />
-let imgs = document.getElementsByTagName('img');
-let num = imgs.length;
+let img = document.getElementsByTagName('img');
+let num = img.length;
 let count = 0;//计数器，从第一张图片开始计
 
 lazyload();//首次加载
