--- a/Vue源码/2.inisState响应式原理.md
+++ b/Vue源码/2.inisState响应式原理.md
@@ -4,7 +4,7 @@
 ##### 理 methos 对象，校验每个属性的值是否为函数、和 props 属性比对进行判重处理，最后得到 vm[key] = methods[key]
 ##### 处理data
 + 判重处理，data 对象上的属性不能和 props、methods 对象上的属性相同
-+ 理 data 对象上的属性到 vm 实例
++ 代理 data 对象上的属性到 vm 实例
 + 为 data 对象的上数据设置响应式 ()。
 ##### 处理computed
 + 为 computed[key] 创建 watcher 实例，默认是懒执行
