--- a/Vue源码/2.inisState响应式原理.md
+++ b/Vue源码/2.inisState响应式原理.md
@@ -16,6 +16,7 @@
 + 如果设置了 immediate，则立即执行 回调函数
 
 ## 响应式原理
++ observe -> Observer isArray -> defineReactive Dep observe -> Object.defineProperty get依赖手机 set notify触发异步更新
 + 调用observe，非对象和 VNode 实例不做响应式处理，创建观察者实例 Observer 判断是否是数组，对象 __defineReactive__
 + 响应式的核心是通过 Object.defineProperty 拦截对数据的访问和设置
 + 响应式的数据分为两类：对象和数组
