--- a/Vue源码/2.inisState响应式原理.md
+++ b/Vue源码/2.inisState响应式原理.md
@@ -24,5 +24,5 @@
 + 访问数据时（obj.key)进行依赖收集，在 dep 中存储相关的 watcher
 + 设置数据时由 dep 通知相关的 watcher 去更新
 ##### 数组，增强数组的那 7 个可以更改自身的原型方法（push,pop,shift，unshift,splice,sort,reverse)这些方法的操作
-+ 添加新数据时进行响应式处理，然后由 dep 通知 watcher 去更新
++ 遍历数组创建观察者实例  添加新数据时进行响应式处理，然后由 dep 通知 watcher 去更新
 + 删除数据时，也要由 dep 通知 watcher 去更新
