--- a/Vue源码/4.全局API.md
+++ b/Vue源码/4.全局API.md
@@ -27,7 +27,7 @@ components 配置项上。
 + 如果提供了第二个参数，则是设置 this.options.filters['my-filter'] = function(val) {xx}
 
 ## Vue.extend(options) 
-ue.extend 基于 Vue 创建一个子类，参数 options 会作为该子类的默认全局配置，就像 Vue 的默认全局配置一样。所以通过 Vue.extend 扩展一个子类，
+vue.extend 基于 Vue 创建一个子类，参数 options 会作为该子类的默认全局配置，就像 Vue 的默认全局配置一样。所以通过 Vue.extend 扩展一个子类，
 一大用处就是内置一些公共配置，供子类的子类使用。
 + 定义子类构造函数，这里和 Vue 一样，也是调用 _init(options)
 + 合并 Vue 的配置和 options，如果选项冲突，则 options 的选项会覆盖 Vue 的配置项
