--- a/Vue源码/2.inisState响应式原理.md
+++ b/Vue源码/2.inisState响应式原理.md
@@ -10,6 +10,7 @@
 + 为 computed[key] 创建 watcher 实例，默认是懒执行
 + 代理 computed[key] 到 vm 实例
 + 判重，computed 中的 key 不能和 data、props 中的属性重复
++ Computed property "${key}" was assigned to but it has no setter computed没有setter
 + 执行函数的computed.key的值(getter函数) 得到函数返回的值给watcher的value，将dirty改为false（不会在执行get函数），更新会触发update，dirty->true
 ##### 处理 watch 对象
 + 为 每个 watch.key 创建 watcher 实例，key 和 watcher 实例可能是 一对多 的关系
