--- a/Vue源码/2.inisState响应式原理.md
+++ b/Vue源码/2.inisState响应式原理.md
@@ -17,13 +17,56 @@
 + 如果设置了 immediate，则立即执行 回调函数
 
 ## 响应式原理
-+ observe -> Observer isArray -> defineReactive Dep observe -> Object.defineProperty get依赖手机 set notify触发异步更新
-+ 调用observe，非对象和 VNode 实例不做响应式处理，创建观察者实例 Observer 判断是否是数组，对象 __defineReactive__
-+ 响应式的核心是通过 Object.defineProperty 拦截对数据的访问和设置
-+ 响应式的数据分为两类：对象和数组
-##### 对象，循环遍历对象的所有属性，为每个属性设置 getter、setter，以达到拦截访问和设置的目的，如果属性值依旧为对象，则递归为属性值上的每个 key 设置 getter、setter
-+ 访问数据时（obj.key)进行依赖收集，在 dep 中存储相关的 watcher
-+ 设置数据时由 dep 通知相关的 watcher 去更新
-##### 数组，增强数组的那 7 个可以更改自身的原型方法（push,pop,shift，unshift,splice,sort,reverse)这些方法的操作
-+ 遍历数组创建观察者实例  添加新数据时进行响应式处理，然后由 dep 通知 watcher 去更新
-+ 删除数据时，也要由 dep 通知 watcher 去更新
++ 调用observe，非对象和 VNode 实例不做响应式处理，创建观察者实例 Observer 
++ Observer 判断是否是数组，遍历数组创建观察者实例，数组会重写方法 ，对象 __defineReactive__
++ __对象，循环遍历对象的所有属性，为每个属性设置 getter、setter，以达到拦截访问和设置的目的，如果属性值依旧为对象，则递归为属性值上的每个 key 设置 getter、setter__
++ __数组，增强数组的那 7 个可以更改自身的原型方法（push,pop,shift，unshift,splice,sort,reverse)这些方法的操作__
+```javascript
+// function defineReactive
+const dep = new Dep()
+// 递归调用，确保对象中的所有可以都被观察
+let childOb = !shallow && observe(val)
+Object.defineProperty(obj, key, {
+  enumerable: true,
+  configurable: true,
+  get: function reactiveGetter() {
+    const value = getter ? getter.call(obj) : val
+    // Dep.target 为 Dep 类的一个静态属性，值为 watcher，在实例化 Watcher 时会被设置
+    // 实例化 Watcher 时会执行 new Watcher 时传递的回调函数（computed 除外，因为它懒执行，watcher里面有判断）
+    // 而回调函数中如果有 vm.key 的读取行为，则会触发这里的 读取 拦截，进行依赖收集
+    if (Dep.target) {
+      // 会调用 watcher 的 addDep   在watcher的newDeps中存放 dep,调用dep.addSub 存放watcher
+      // 依赖收集，在 dep 中添加 watcher，也在 watcher 中添加 dep
+      dep.depend()
+      // childOb 表示对象中嵌套对象的观察者对象，如果存在也对其进行依赖收集
+      if (childOb) {
+        childOb.dep.depend()
+        if (Array.isArray(value)) {
+          dependArray(value)
+        }
+      }
+    }
+    return value
+  },
+  // set 拦截对 obj[key] 的设置操作
+  set: function reactiveSetter(newVal) {
+    // 旧的 obj[key]
+    const value = getter ? getter.call(obj) : val
+    // 如果新老值一样，则直接 return，不跟新更不触发响应式更新过程
+    if (newVal === value || (newVal !== newVal && value !== value)) {
+      return
+    }
+    // setter 不存在说明该属性是一个只读属性，直接 return
+    if (getter && !setter) return
+    if (setter) {
+      setter.call(obj, newVal)
+    } else {
+      val = newVal
+    }
+    // 对新值进行观察，让新值也是响应式的
+    childOb = !shallow && observe(newVal)
+    // 依赖通知更新
+    dep.notify()
+  }
+})
+```
