--- a/Vue源码/2.inisState响应式原理.md
+++ b/Vue源码/2.inisState响应式原理.md
@@ -23,6 +23,7 @@
 + __数组，增强数组的那 7 个可以更改自身的原型方法（push,pop,shift，unshift,splice,sort,reverse)这些方法的操作__
 ```javascript
 // function defineReactive
+// 实例化 dep，一个 key 一个 dep
 const dep = new Dep()
 // 递归调用，确保对象中的所有可以都被观察
 let childOb = !shallow && observe(val)
