--- a/Vue源码/2.inisState响应式原理.md
+++ b/Vue源码/2.inisState响应式原理.md
@@ -30,6 +30,7 @@ let childOb = !shallow && observe(val)
 Object.defineProperty(obj, key, {
   enumerable: true,
   configurable: true,
+  // get 拦截对 obj[key] 的读取操作
   get: function reactiveGetter() {
     const value = getter ? getter.call(obj) : val
     // Dep.target 为 Dep 类的一个静态属性，值为 watcher，在实例化 Watcher 时会被设置
