--- a/Vue源码/2.inisState响应式原理.md
+++ b/Vue源码/2.inisState响应式原理.md
@@ -71,4 +71,28 @@ Object.defineProperty(obj, key, {
     dep.notify()
   }
 })
+// 重写Array的方法
+methodsToPatch.forEach(function (method) {
+  // 缓存原生方法，比如 push
+  const original = arrayProto[method]
+  def(arrayMethods, method, function mutator (...args) {
+    const result = original.apply(this, args)
+    const ob = this.__ob__
+    let inserted
+    switch (method) {
+      case 'push':
+      case 'unshift':
+        inserted = args
+        break
+      case 'splice':
+        inserted = args.slice(2)
+        break
+    }
+    // 对新插入的元素做响应式处理
+    if (inserted) ob.observeArray(inserted)
+    // 通知更新
+    ob.dep.notify()
+    return result
+  })
+})
 ```
