--- a/Vue源码/2.inisState响应式原理.md
+++ b/Vue源码/2.inisState响应式原理.md
@@ -21,6 +21,7 @@
 + Observer 判断是否是数组，遍历数组创建观察者实例，数组会重写方法 ，对象 __defineReactive__
 + __对象，循环遍历对象的所有属性，为每个属性设置 getter、setter，以达到拦截访问和设置的目的，如果属性值依旧为对象，则递归为属性值上的每个 key 设置 getter、setter__
 + __数组，增强数组的那 7 个可以更改自身的原型方法（push,pop,shift，unshift,splice,sort,reverse)这些方法的操作__
++ 对新插入的元素做响应式处理，然后触发更新
 ```javascript
 // function defineReactive
 // 实例化 dep，一个 key 一个 dep
