--- a/Vue源码/3.异步更新原理.md
+++ b/Vue源码/3.异步更新原理.md
@@ -1,7 +1,7 @@
 ## Vue 的异步更新机制是如何实现的
 + Vue 的异步更新机制的核心是利用了浏览器的异步任务队列来实现的，首选微任务队列，宏任务队列次之。
-+ 当响应式数据更新后，触发setter会调用 dep.notify 方法，通知 dep 中收集的 watcher 去执行 update 方法（遍历watcher），watcher.update 将 watcher 自己放入一个 watcher 队列（全局的 queue 数组）。
-+ 然后通过 nextTick 方法将一个刷新 watcher 队列的方法（flushSchedulerQueue）放入一个全局的 callbacks 数组中。
++ 当响应式数据更新后，触发setter会调用 dep.notify（遍历watcher）方法，通知 dep 中收集的 watcher 去执行 update 方法，watcher.update 将 watcher 自己放入一个 watcher 队列（全局的 queue 数组）。
++ 然后通过 nextTick 方法将一个刷新 watcher 队列的方法（flushSchedulerQueue）放入一个全局的 callbacks 数组中，用try catch包裹。
 + 如果此时浏览器的异步任务队列中没有一个叫 flushCallbacks 的函数，则执行 timerFunc 函数，将 flushCallbacks 函数放入异步任务队列。
 如果异步任务队列中已经存在 flushCallbacks 函数，等待其执行完成以后再放入下一个 flushCallbacks 函数。
 ```javascript
