--- a/Notes/命令.md
+++ b/Notes/命令.md
@@ -39,4 +39,11 @@ tree /f > list.txt 获取项目代码目录结构
 + 安装yarn： npm install -g yarn 查看版本yanr -v
 + 安装cnpm：npm install -g cnpm --registry=https://registry.npm.taobao.org
 + 安装指定版本  cnpm install --save echarts@4.3.0
+### npm设置代理
+npm config set proxy http://server:port  
+npm config set https-proxy http://server:port  
+如果代理需要认证的话可以这样来设置：  
+npm config set proxy http://username:password@server:port  
+npm config set https-proxy http://username:pawword@server:port
+
 
