--- a/Notes/命令.md
+++ b/Notes/命令.md
@@ -39,6 +39,8 @@ tree /f > list.txt 获取项目代码目录结构
 + 安装yarn： npm install -g yarn 查看版本yanr -v
 + 安装cnpm：npm install -g cnpm --registry=https://registry.npm.taobao.org
 + 安装指定版本  cnpm install --save echarts@4.3.0
++ 删除代理 npm config delete proxy，删除镜像 npm config delete registry
++ 查看配置 npm config list
 ### npm设置代理
 npm config set proxy http://server:port  
 npm config set https-proxy http://server:port  
