--- a/Notes/项目开发相关/开发中能用到的一些.md
+++ b/Notes/项目开发相关/开发中能用到的一些.md
@@ -48,6 +48,9 @@
   filter: drop-shadow(48px 0px 0px #1367da);
   transform: translateX(-48px);
 }
+{//-webkit-text-security：指定要使用的形状来代替文字的显示
+  webkit-text-security：none;//circle 圆圈、disc 圆形、square 正方形
+}
 ```
 伪类是操作文档中已有的元素，而伪元素是创建了一个文档外的元素，两者最关键的区别就是这点。此外，为了书写CSS时进行区分，一般伪类是单冒号，如:hover，而伪元素是双冒号::before。  
 一般大部分伪类强制使用单冒号，大部分伪元素单冒号和双冒号都可以，但是为了区分，建议按照规范书写。[伪类](https://www.runoob.com/css/css-pseudo-classes.html)  
