--- a/Notes/命令.md
+++ b/Notes/命令.md
@@ -1,6 +1,21 @@
-origin是远程仓（remote repository）克隆（clone）到本地的默认名字。  
-git push --set-upstream origin F1338317_penghy	设置源(目前公司account)  
+### git安装完成后，还需要最后一步设置，在命令行输入：
++ git config --global user.name "Your Name"  
++ git config --global user.email "email@example.com"
++ git config命令的--global参数，用了这个参数，表示你这台机器上所有的Git仓库都会使用这个配置，当然也可以对某个仓库指定不同的用户名和Email地址。
 
+### 创建一个版本库
++ 创建一个空目录
++ 通过git init命令把这个目录变成Git可以管理的仓库
++ git add 告诉Git，把文件添加到仓库
++ git commit 告诉Git，把文件提交到仓库,-m后面输入的是本次提交的说明
+
+### 远程仓库
++ 本地Git仓库和GitHub仓库之间的传输是通过SSH加密的
++ 创建SSH Key。在用户主目录下，看看有没有.ssh目录，如果有，再看看这个目录下有没有id_rsa和id_rsa.pub这两个文件，id_rsa是私钥，不能泄露出去，id_rsa.pub是公钥
++ 如果没有，打开Shell（Windows下打开Git Bash），创建SSH Key：ssh-keygen -t rsa -C "youremail@example.com"，你需要把邮件地址换成你自己的邮件地址，然后一路回车，使用默认值即可
++ 登陆GitHub，打开“Account settings”，“SSH Keys”页面：点“Add SSH Key”，填上任意Title，在Key文本框里粘贴id_rsa.pub文件的内容
+
+origin是远程仓（remote repository）克隆（clone）到本地的默认名字。  
 git pull origin master	更新master代码到分支  
 
 git branch       查看分支  
