--- a/Notes/项目开发相关/开发中能用到的一些.md
+++ b/Notes/项目开发相关/开发中能用到的一些.md
@@ -227,3 +227,50 @@ fetch(url, {
       window.URL.revokeObjectURL(blobUrl);
     });
 ```
+### 超时退出
+```javascript
+export function checkOvertime() {
+	let lastTime = new Date().getTime()
+	let currentTime = new Date().getTime()
+	let timeOut = 30 * 60 * 1000  // 设置超时时间: 30分钟
+	localStorage.setItem("lastTime", new Date().getTime())
+	window.onload = function () {
+		// 检测鼠标点击事件
+		window.document.onmousedown = function () {
+			localStorage.setItem("lastTime", new Date().getTime())
+		}
+	};
+
+	function checkTimeout() {
+		currentTime = new Date().getTime()		// 更新当前时间
+		lastTime = localStorage.getItem("lastTime");
+		if (currentTime - lastTime > timeOut) { // 判断是否超时
+
+			// 清除storage的数据(登陆信息和token)
+			localStorage.clear()
+			// 如果是登录页直接return 没有登录的状态不跳转
+			const token = cookies.get('_access_token');
+			if (window.location.pathname == '/sign-in' || !token) return
+			window.clearInterval(timeOut1)
+			// 退出操作
+			logoutUser()
+		}
+	}
+	/* 定时器 间隔5分钟检测是否长时间未操作页面 */
+	let time = 5 * 60 * 1000
+	var timeOut1 = window.setInterval(checkTimeout, time);
+}
+
+localStorage.setItem(
+  'is-sign-out',
+  JSON.stringify({
+    date: new Date().toLocaleString(),
+    message: 'yes'
+  })
+);
+window.addEventListener('storage', function (e) {
+  if (e.key == 'is-sign-out') {
+    logoutUser();
+  }
+});
+```
