--- a/Notes/命令.md
+++ b/Notes/命令.md
@@ -38,8 +38,10 @@ git checkout master		git pull	git checkout F1338317_penghy	git merge master
 执行以下命令查看是否使用了淘宝的镜像地址，如果是，就改为原来的地址：  
 npm config get registry  
 npm config set registry=http://registry.npmjs.org  
-改回淘宝的地址：npm config set registry=https://registry.npm.taobao.org   registry=http://registry.npm.taobao.org/  
+淘宝镜像更新：npm config set registry https://registry.npmmirror.com   registry=http://registry.npmmirror.com  
+域名停止：npm config set registry=https://registry.npm.taobao.org   registry=http://registry.npm.taobao.org/  
 把npm的镜像完全设为了淘宝的镜像，要注意有些依赖包只有npm原始镜像里面才有，而淘宝里面没有  
+
 
 如果之前安装过vue的2.0版本，你需要把2.0相关的删除：npm uni -g vue-cli或者cnpm uni -g vue-cli  
 如果没有安装或vue的2.0版本的话，直接在全局的命令窗口：cnpm i -g @vue/cli  
