--- a/React/项目开发相关.md
+++ b/React/项目开发相关.md
@@ -7,4 +7,7 @@ const searchRef = useRef<InputRef>(null);
 let value = searchRef.current?.input?.value;
 
 <Input ref={searchRef} />
+
+const [value, setValue] = useState('');
+<Input value={value} />
 ```
