--- a/Notes/工程化、浏览器/模块化.md
+++ b/Notes/工程化、浏览器/模块化.md
@@ -16,5 +16,5 @@
 
 ### ES6模块化
 + CommonJS 模块输出的是一个值的拷贝，ES6 模块输出的是值的引用。
-+ CommonJS 模块是运行时加载，ES6 模块是编译时输出接口
-+ ES6 模块是动态引用，并且不会缓存值，模块里面的变量绑定其所在的模块。
++ CommonJS 模块是运行时加载，ES6 模块是编译时输出接口，使得对JS的模块进行静态分析成为了可能；
++ 
