--- a/Notes/工程化、浏览器/模块化.md
+++ b/Notes/工程化、浏览器/模块化.md
@@ -17,4 +17,4 @@
 ### ES6模块化
 + CommonJS 模块输出的是一个值的拷贝，ES6 模块输出的是值的引用。
 + CommonJS 模块是运行时加载，ES6 模块是编译时输出接口，使得对JS的模块进行静态分析成为了可能；
-+ 
++ 因为 ES6 的模块系统是静态的，而 CommonJS 的模块系统是动态的，无法在编译时分析导出和引用关系。因此，CommonJS 的模块系统不能使用 Tree shaking 技术。
