--- a/Notes/读书/百万富翁快车道.md
+++ b/Notes/读书/百万富翁快车道.md
@@ -49,5 +49,14 @@
 + 创新产品或服务
 + 创造规模效应
 
-
+## 一些想法
++ 让他们感觉更好
++ 帮助他们解决一个问题
++ 教育他们
++ 让他们看上去更棒（健康、营养、衣着、装束）
++ 给他们安全感（住房、安全、健康），比如现在大家焦虑的海克斯科技是不是可以考虑一下呢
++ 产生积极情绪（爱、快乐、欢笑、自信）
++ 满足口腹之欲
++ 让事情变得容易一些
++ 给他们梦想和希望
 
