--- a/Notes/读书/百万富翁快车道.md
+++ b/Notes/读书/百万富翁快车道.md
@@ -37,9 +37,16 @@
 + 忌掉「改日做」，这个借口很危险而且具有传染性，会将你诱入不知所措之地
 + 把「改日」换成「今天」。是的，现在是时候上路了
 
+### some
++ 空想从来不会让任何人致富，除非将这种想法付诸实践
++ 信念是改变的起点，想象力至关重要。如果你不相信你可以的话，那么结果往往也会如此
++ 影响力定律表明，你影响的人越多，无论是在规模还是等级上，你就越容易成为富人。
++ 你越有办法做大数字，你就越容易获得财富。为数百万人提供服务就能赚取数百万美元的财富。想得大，才能赚得多。直接或间接影响
++ 永远不会有完美的时间。某一天就应该是今天，今天就是当下。今天才是你拥有的全部！如果你等待，机会就将擦肩而过，你的快车道旅程将程不会开始。
+
 ### 5条快车道戒律
-+ __需求戒律__:解决需求的生意才会成功
-+ __进入戒律__:当进入壁垒降低时，竞争会加剧，道路会出现拥堵。容易进入的生意通常缺乏控制，而且需要在过度饱和的市场中经营。
++ __需求戒律__:能提供价值的业务才会成功，能解决问题的业务才会获得利润。永远不要因为想赚钱而开始一项业务。停止追逐金钱，从寻找需求入手停止从你自私的愿望、角度想问题，不管想的是金钱、梦想，还是「你喜欢的事情」。相反，寻找需求、问题、痛点、服务缺陷和情绪。企业家之所以失败，是因为他们从自我的角度经营业务，而自私的想法不会带来盈利的生意。我该给这个世界提供什么东西？
++ __进入戒律__:当进入壁垒降低时，竞争会加剧，那条路的致富效果就会减弱。容易进入的生意通常缺乏控制，而且需要在过度饱和的市场中经营。
 + __控制戒律__:搭便车者把业务控制权让给了快车道上的人。在司机与搭便车者的关系中，司机总是掌握控制权，而搭便车者要看司机的脸色
 + __规模戒律__：你的客户群决定了你的生态空间。空间越大，财富潜力就越大
 + __时间戒律__：让你无法脱身的生意只是一个工作。无须花费很多时间就能获得收入的生意，满足了时间戒律。
