--- a/Notes/项目开发相关/开发中能用到的一些.md
+++ b/Notes/项目开发相关/开发中能用到的一些.md
@@ -38,10 +38,11 @@
   overflow-y: hidden;
   white-space: nowrap;
   &::-webkit-scrollbar {
-    height: 5px;
+    height: 10px;
   }
   &::-webkit-scrollbar-thumb {
-    background: #dbdee3;
+    border-radius: 10px;
+    background: rgba(0, 0, 0, 0.3);
   }
 }
 {// svg图片颜色修改
