--- a/Notes/项目开发相关/开发中能用到的一些.md
+++ b/Notes/项目开发相关/开发中能用到的一些.md
@@ -163,47 +163,155 @@ clickOutside(e) {
 // @submit.native.prevent 阻止输入框enter刷新页面，@keydown.enter.native enter事件
 ```
 
-### 关于文件或者图片上传
+### 关于文件或者图片上传 点击或者拖拽
 ```javascript
-<button
-  type="button"
-  @click="click"
->
-  <span v-if="fileName">重新上传</span>
-  <span v-else>上传文件</span>
-</button>
-<span>{{ fileName }}</span>
-<input
-  id='input'
-  type="file"
-  ref="uploadFile"
-  style="display:none"
-  @change="upload"
-  multiple
-/>
-data() {
-  return { fileName: '' }
-}
-click() {
-  // 偷梁换柱,触发文件上传
-  this.$refs.uploadFile.click();
-},
-async upload(event) {
-  let files = event.target.files || event.dataTransfer.files;
-  console.log(files);
+<script setup lang="ts">
+import { ref, /* reactive, */ computed, onMounted } from "vue";
+import { Close } from "@element-plus/icons-vue";
+import { ElMessage } from "element-plus";
 
-  if (!files.length) {
-    this.fileName = '';
-    return;
+const uploadedFiles = ref([]);
+const fileInput = ref(null);
+const emit = defineEmits(["file-uploaded", "file-remove", "file-exceed"]);
+// 已上传文件列表
+const propFilesInfo = defineProps({
+  filesList: {
+    type: Array,
+    default() {
+      return [];
+    }
+  },
+  uploadTips: {
+    type: String,
+    default: "支持上传jpg、png、pdf、docx等文件格式，且不超过100MB"
+  },
+  accept: {
+    type: String,
+    default: ".jpg, .png, .pdf, .docx"
+  },
+  size: {
+    type: Number,
+    default: 100
   }
-  this.fileName = files[0].name;
+});
+const maxFileSize = computed(() => {
+  return propFilesInfo.size * 1024 * 1024;
+});
+uploadedFiles.value = [...uploadedFiles.value, ...propFilesInfo.filesList];
+const handleDragOver = () => {
+  // 阻止浏览器默认的拖拽行为
+  event.preventDefault();
+};
 
-  // 通过FormData将文件转成二进制数据
-  let params = new FormData();
-  params.append('file', files[0]);
-  const { data: res } = await this.$HttpApi.uploadFile(params);
-  console.log(res);
-}
+const isImage = file => {
+  return file.type.startsWith("image/");
+};
+
+const uploadFiles = files => {
+  let isExceed = false;
+  let exceedFile = null;
+  for (let i = 0; i < files.length; i++) {
+    // 上传多个处理
+    const file = files[i];
+    if (file.size > maxFileSize.value) {
+      // 可以补充超过size事件 file-exceed
+      exceedFile = file;
+      ElMessage.warning(
+        `${file.name}文件大小超过限制,最大为${propFilesInfo.size}M`
+      );
+      isExceed = true;
+      break;
+    }
+    isExceed = false;
+    const reader = new FileReader();
+    reader.onload = e => {
+      const preview = e.target.result;
+      // 更新uploadedFiles数组
+      uploadedFiles.value.push({
+        name: file.name,
+        type: file.type,
+        size: file.size,
+        preview: preview
+      });
+    };
+
+    // 如果是图片，读取图片内容
+    if (isImage(file)) {
+      reader.readAsDataURL(file);
+    } else {
+      // 非图片文件直接显示文件名
+      uploadedFiles.value.push({
+        name: file.name,
+        type: file.type,
+        size: file.size
+      });
+    }
+  }
+  if (!isExceed) {
+    emit("file-uploaded", files, uploadedFiles.value);
+  } else {
+    // 超限事件
+    emit("file-exceed", exceedFile, uploadedFiles.value);
+  }
+};
+// 点击上传
+const handleFileChange = event => {
+  uploadFiles(event.target.files);
+};
+// 拖拽
+const handleDrop = event => {
+  event.preventDefault();
+  uploadFiles(event.dataTransfer.files);
+};
+const triggerFileInput = () => {
+  fileInput.value.click();
+};
+const removeFile = index => {
+  uploadedFiles.value.splice(index, 1);
+  emit("file-remove", uploadedFiles.value);
+};
+
+onMounted(() => {});
+</script>
+
+<template>
+  <div class="file-upload-container">
+    <div class="file-upload-main">
+      <div
+        class="upload-area"
+        @dragover.prevent="handleDragOver"
+        @drop.prevent="handleDrop"
+        @click="triggerFileInput"
+      >
+        <img src="@/assets/workspace_images/upload_icon.png" alt="" />
+        <span class="upload_text">拖拽至此或点击上传</span>
+      </div>
+      <div class="files_content">
+        <div
+          v-for="(file, index) in uploadedFiles"
+          :key="index"
+          class="files_list"
+        >
+          <el-icon @click.stop="removeFile(index)"><Close /></el-icon>
+          <img v-if="isImage(file)" :src="file.preview" alt="preview" />
+          <div v-else class="upload_text">{{ file.name }}</div>
+        </div>
+      </div>
+    </div>
+    <p class="tips-text">{{ propFilesInfo.uploadTips }}</p>
+    <input
+      ref="fileInput"
+      type="file"
+      style="display: none"
+      @change="handleFileChange"
+      :accept="accept"
+      multiple
+    />
+  </div>
+</template>
+<style scoped lang="scss">
+</style>
+
 ```
 + FormData 接口提供了一种表示表单数据的键值对 key/value 的构造方式，并且可以轻松的将数据通过XMLHttpRequest.send() 方法发送出去
 
