--- a/Notes/命令.md
+++ b/Notes/命令.md
@@ -66,3 +66,20 @@ npm config set proxy http://username:password@server:port
 npm config set https-proxy http://username:pawword@server:port
 
 
+### 配置多个SSH key
+如配置多个取不同名字，同时配置config文件
+```
+# gitlab.com
+Host gitlabin
+HostName gitlabin.fii-fmc.com
+User penghy
+PasswordAuthentication yes
+PreferredAuthentications publickey
+PubkeyAcceptedKeyTypes +ssh-rsa
+IdentityFile ~/.ssh/gitlab_rsa
+```
+报错：No supported authentication methods available (server sent:oublickey)
+修改小乌龟配置：设置-网络
+默认：D:\soft\Tortoise\bin\TortoiseGitPlink.exe
+修改：D:\soft\Git\usr\bin\ssh.exe
+配置后成功解决
