--- a/Notes/命令.md
+++ b/Notes/命令.md
@@ -24,16 +24,15 @@ git checkout     切换分支
 git merge 		 合并分支  
 git log			 查看历史记录  
 git reset		 恢复版本  
-git reflog		 查看命令记录  
-
+git reflog		 查看命令记录  ‌
 git status		 查看当前状态  
 git add .		 把所有内容添加到本地git换成区  
 git commit -m 'desc'	提交代码，推送修改到git库  
 git push origin myBranch(origin myBranch可省略)  
 
-git branch F1338317_penghy		要在本地创建分支  然后对应源  
-git push --set-upstream origin F1338317_penghy		设置上游  
-git checkout master		git pull	git checkout F1338317_penghy	git merge master  
+git checkout -b prod 和git checkout -b prod origin/prod：区别在于‌是否自动建立本地分支与远程分支的追踪关系  
+git fetch origin    获取远程所有分支信息
+git rebase xxx      将 xxx 的变更 rebase 到 分支 上
 # 
 执行以下命令查看是否使用了淘宝的镜像地址，如果是，就改为原来的地址：  
 npm config get registry  
